--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,137 @@
-body {
-    font-family: Arial, sans-serif;
-}
-
-.quiz-container {
-    max-width: 600px;
-    margin: 0 auto;
+header, footer {
+    background-color: #333;
+    color: #fff;
     padding: 20px;
     text-align: center;
 }
 
 h1 {
+    margin: 0;
+    font-size: 45px;
+    font-weight: bold;
+    text-transform: uppercase;
     margin-bottom: 20px;
+    font-family: 'Dancing Script', cursive; /* Aplica a fonte cursiva ao título */
 }
 
-#question {
-    margin-bottom: 20px;
+
+nav {
+    float: right; /* Alinha a navegação à direita */
 }
 
-#options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
-button {
-    padding: 10px 20px;
-    background-color: #007bff;
+nav ul li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+nav ul li:first-child {
+    margin-left: 0;
+}
+
+nav ul li a {
     color: #fff;
-    border: none;
-    cursor: pointer;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Arial, sans-serif;
 }
 
-button:hover {
-    background-color: #0056b3;
+nav ul li a:hover {
+    color: #ffc107;
 }
 
-#score {
+header img.logo {
+    width: 90px;
+    height: auto;
+    margin-right: 20px;
+    float: left;
+}
+
+main {
+    padding: 20px;
+}
+
+section {
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    font-size: 24px;
+    color:  #333;
+    margin-top: 0;
+}
+
+p {
+    font-family: cursive;
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+.team {
     margin-top: 20px;
+}
+
+.person {
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+}
+
+.person h4 {
+    font-size: 20px;
+    margin-top: 0;
+}
+
+.person p {
+    font-size: 16px;
+    margin-bottom: 0;
+}
+
+/* Estilos para as imagens dos integrantes */
+.person {
+    display: flex; /* Usa o modelo de layout flexível */
+    align-items: center; /* Alinha verticalmente os itens */
+}
+
+.person img {
+    width: 80px; /* Define a largura das imagens */
+    height: auto; /* Mantém a proporção da imagem */
+    margin-left: 40px; /* Adiciona um espaço à esquerda das imagens */
+}
+#quadro-negro {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    margin-top: 50px; /* Ajuste conforme necessário */
+    border-radius: 10px;
+}
+
+#quadro-negro h3 {
+    margin-top: 0;
+}
+
+#quadro-negro ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#quadro-negro ul li {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+#imagem-quadro {
+    width:70%; /* Define a largura da imagem */
+    height: auto; /* Mantém a proporção da imagem */
+    float: center; 
+    margin-top: 20px; /* Adiciona um espaço acima da imagem */
 }
