--- a/stylei.css
+++ b/stylei.css
@@ -110,3 +110,26 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+#mensagem-parabens {
+    text-align: center;
+    font-size: 24px;
+    color: green;
+    margin-top: 20px;
+}
+
+#cronometro {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#ranking {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+#ranking li {
+    font-size: 18px;
+}
