--- a/stylei.css
+++ b/stylei.css
@@ -72,7 +72,6 @@ header img.logo {
 main {
     padding: 20px;
 }
-
 #tabuleiro {
     display: flex;
     flex-wrap: wrap;
@@ -113,23 +112,16 @@ button:hover {
 
 #mensagem-parabens {
     text-align: center;
-    font-size: 24px;
-    color: green;
+    font-size: 20px;
     margin-top: 20px;
 }
 
 #cronometro {
     text-align: center;
-    font-size: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #ranking {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
-    text-align: center;
-}
-
-#ranking li {
-    font-size: 18px;
 }
