--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     line-height: 1.6;
 }
 
-header{
+header, footer{
     background-color: #333;
     color: #fff;
     padding: 20px;
@@ -78,15 +78,6 @@ main {
     padding: 20px;
 }
 
-footer{
-    text-align: center;
-    background: #333;
-    color: #fff;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
 
 /* Estilos para a seção de história */
 #story {
