--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header, footer{
 
 }
 
-/* Estilos para o cabeçalho 
+/* Estilos para o cabeçalho */
 header {
     background-color: #333;
     color: #fff;
